--- a/index.html
+++ b/index.html
@@ -283,7 +283,16 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
+ <!-- Chatbot intégré -->
+    <section id="chatbot" class="chatbot-section">
+        <h1>Chatbot</h1>
+       
+        <iframe
+            src="https://cdn.botpress.cloud/webchat/v2.3/shareable.html?configUrl=https://files.bpcontent.cloud/2025/02/11/22/20250211225300-J8WEZDJL.json"
+            class="chatbot-frame"
+            allow="camera; microphone; geolocation"
+        ></iframe>
+    </section>
 </body>
 
 <footer>
